# TTE-PY

./: pyproject.toml
.github/: README.md
data/: data_censored.csv  data_with_weights.csv  data_with_weights_k_means_ver.csv
src/: TTE-final.ipynb  TTE-v2.ipynb  TTE.ipynb
src/models/: model_d0.pkl  model_d1.pkl  model_n.pkl
